security_group.tf
resource "aws_security_group" "fazle_SG_EC2" {
  name        = "fazle_SG_EC2"
  description = "Security Group for my EC2 instance"
  vpc_id      = aws_vpc.fazle_vpc.id //dep


  ingress {
    description      = "SSH"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "fazle_SG_EC2"
  }
}
